# HoloPlayer

./: .gitignore  BaseFFmpeg.cpp  BaseFFmpeg.h  BaseSDL.cpp  BaseSDL.h  CMakeLists.txt  CMakeUserPresets.json  CMake_cfg.cmake  CMake_pkg.cmake  Cirucular_Queue.hpp  EncodeString.hpp  Img.qrc  ParseJson.cpp  ParseJson.h  README.md  SpiderVideo.cpp  SpiderVideo.h  build.bat  common.hpp  holomainwindow.cpp  holomainwindow.h  holomainwindow.ui  main.cpp  nettofiledialog.cpp  nettofiledialog.h  nettofiledialog.ui
core/: CMakeLists.txt
core/common/: CMakeLists.txt  common.hpp
core/media/: CMakeLists.txt
core/media/include/: BaseFFmpeg.h  BaseSDL.h
core/media/src/: BaseFFmpeg.cpp  BaseSDL.cpp
core/spider/: CMakeLists.txt
core/spider/include/: ParseJson.h  SpiderVideo.h
core/spider/src/: ParseJson.cpp  SpiderVideo.cpp
doc/: ffmpeg-all.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
external_library/: CMakeLists.txt  ffmpeg_config.cmake
external_library/ffmpeg-n7.1-latest-win64-gpl-shared-7.1/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-filters.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html  general.html
external_library/ffmpeg-n7.1-latest-win64-gpl-shared-7.1/include/libavutil/: ffversion.h
external_library/ffmpeg-n7.1-latest-win64-gpl-shared-7.1/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libpostproc.pc
gui/: CMakeLists.txt  HoloTitleWidget.cpp  HoloTitleWidget.h  Img.qrc  holomainwindow.cpp  nettofiledialog.cpp
inc/: BaseFFmpeg.h  BaseSDL.h  Circular_Queue.hpp  Cirucular_Queue.hpp  EncodeString.h  EncodeString.hpp  ParseJson.h  SpiderVideo.h  common.hpp
include/libavutil/: ffversion.h
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: BaseFFmpeg.cpp  BaseSDL.cpp  ParseJson.cpp  SpiderVideo.cpp  main.cpp
src/ui/: HoloTitleWidget.h  nettofiledialog.cpp  nettofiledialog.h
test/: CMakeLists.txt
test/build-holoplayer/: CMakeLists.txt  holoplayer.cpp
ui/: HoloTitleWidget.cpp  HoloTitleWidget.h  HoloTitleWidget.ui  holomainwindow.cpp  holomainwindow.h  holomainwindow.ui  nettofiledialog.cpp  nettofiledialog.h  nettofiledialog.ui
